src/objects/loan__Floating_Rate_Index__c.object
<CustomObject>
    <description>Floating rate index types for Variable Rate Loan</description>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check to enable/Uncheck to disable the Floating Rate Index.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Description__c</fullName>
        <inlineHelpText>Description of the Floating Rate Index</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Records_Count__c</fullName>
        <label>Rate Records Count</label>
        <summaryFilterItems>
            <field>loan__Floating_Rate__c.loan__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Floating_Rate__c.loan__Reset_Process_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Floating_Rate__c.loan__Floating_Rate_Index__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Floating Rate Index</label>
    <nameField>
        <label>Floating Rate Index Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floating Rate Indexes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>